# EVOl

./: .clang-format  CMakeLists.txt  bot.cpp  bot.hpp  crossover_mutation.cpp  crossover_mutation.hpp  direction.cpp  direction.hpp  draw.cpp  draw.hpp  emptiness.cpp  emptiness.hpp  food.cpp  food.hpp  main.cpp  object.cpp  object.hpp  poison.cpp  poison.hpp  processing_world.cpp  processing_world.hpp  wall.cpp  wall.hpp  world.cpp  world.hpp
